--- a/nginx-docker/nginx/nginx.conf
+++ b/nginx-docker/nginx/nginx.conf
@@ -37,6 +37,14 @@ http {
             index index.html;
         }
 
+        location /stream {
+            proxy_pass http://api:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+        }
+
         location /hls {
             types {
                 application/vnd.apple.mpegurl m3u8;
